Fix Headings on mobile devices

--- a/components/experience/experience.module.scss
+++ b/components/experience/experience.module.scss
@@ -11,6 +11,10 @@
   justify-content: space-between;
 
   margin-bottom: 1.2rem;
+  @media (max-width: 600px) {
+    flex-direction: column;
+    align-items: start;
+  }
 }
 
 .title {
